feat: use "Home Info" instead of "Profile Mode"

--- a/hugo.yml
+++ b/hugo.yml
@@ -1,10 +1,15 @@
 baseURL: "https://www.brycekwon.com"
+languageCode: en-us
 title: "Bryce Kwon | Undergraduate Computer Science Student"
 copyright: "© Bryce Kwon 2024"
 
 disableKinds: ["rss"]
-enableRobotsTXT: true
 disableHugoGeneratorInject: true
+
+enableRobotsTXT: true
+buildDrafts: false
+buildFuture: false
+buildExpired: false
 
 minify:
   disableXML: true
@@ -12,44 +17,63 @@ minify:
 
 params:
   env: "production"
-  description: "Bryce Kwon, a computer science student and aspiring software engineer. Explore my projects, professional history, and interests on my journey."
-  keywords: ["Bryce Kwon", "about Bryce Kwon",  "computer science", "undergraduate student", "personal portfolio", "personal website", "Bryce Kwon LinkedIn", "Bryce Kwon GitHub"]
+  author: "Bryce Kwon"
+  DateFormat: "January 2, 2006"
+
   defaultTheme: dark
   disableThemeToggle: false
+
   hideFooter: true
-  images: ["/images/avatar.png"]
+  hideAuthor: true
+
   ShowReadingTime: true
+  ShowShareButtons: false
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
-  ShowWordCount: true
-  ShowToc: true
   ShowCodeCopyButtons: true
+  ShowFullTextinRSS: true
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: true
+  tocopen: false
 
   assets:
+    disableHLJS: true
     disableFingerprinting: false
     favicon: "/favicon.ico"
 
   label:
-    text: "Bryce Kwon"
-    icon: "/images/avatar.png"
+    text: "Bryce Kwon's Website"
+  
+  homeInfoParams:
+    Title: "Hi there. I'm a bug on the Internet."
+    Content: "I'm Bryce Kwon, a fourth-year undergraduate computer science student interested in software engineering, computer networks, and cybersecurity. This website is meant to be my **home base** on the internet, where I can share my thoughts, projects, and experiences."
 
-  profileMode:
-    enabled: true
-    title: "Bryce Kwon"
-    subtitle: "I'm Bryce Kwon, a fourth-year undergraduate computer science student interested in software engineering, computer networks, and cybersecurity."
-    imageUrl: "/images/avatar.png"
+  # profileMode:
+  #   enabled: false
+  #   title: "Hi there. I'm a bug on the internet."
+  #   subtitle: "I'm Bryce Kwon, a fourth-year undergraduate computer science student interested in software engineering, computer networks, and cybersecurity."
+  #   imageUrl: "/images/avatar.png"
+
+  # socialIcons:
+  #   - name: github
+  #     url: "https://github.com/Wonderfall"
+  #   - name: linkedin
+  #     url: "https://www.linkedin.com/in/brycekwon"
 
   cover:
-    hidden: false
+    hidden: true
     hiddenInList: true
-    hiddenInSingle: false
+    hiddenInSingle: true
 
   editPost:
     URL: "https://github.com/brycekwon/www.brycekwon.com/blob/main/content"
     Text: "Suggest Changes"
     appendFilePath: true
 
-  # https://fusejs.io/api/options.html
   fuseOpts:
     isCaseSensitive: false
     shouldSort: true
@@ -73,6 +97,14 @@ markup:
 
 menu:
   main:
+    # - identifier: "search"
+    #   name: "Search"
+    #   url: "/search"
+    #   weight: 10
+    # - identifier: "tags"
+    #   name: "Tags"
+    #   url: "/tags"
+    #   weight: 20
     - identifier: "LinkedIn"
       name: "LinkedIn"
       url: "https://www.linkedin.com/in/brycekwon"
